# clinical-trial-outcome

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PHASE0.md  README.md  STATE.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
config/: aact.yaml  features.yaml  leakage_blocklist.yaml
data/processed/: gold_test_nct_ids.json
data/raw/: sync_state.json
docs/: PHASE1.md  PHASE2.md
notebooks/: eda.py
reports/: RESULTS.md  definition_audit.md  facilities_leak_check.md  failure_class_shift.md  fit_diagnostic.md  label_vs_population.md  phase2_ceiling_check.md  phase2_label_expansion_scope.md  pre_phase2_audit.md  pre_training_audit.md  project_audit.md  weak_failure_pool.md
scripts/: compute_tier_thresholds.py  dead_feature_scan.py  definition_audit.py  fit_diagnostic.py  label_vs_population.py  phase2_ceiling_check.py  phase2_label_expansion_scope.py  visualize_data.py  visualize_model_results.py  weak_failure_pool.py
src/cto/common/: db.py  settings.py
src/cto/data/: aact_client.py  cto_labels.py  mirror.py
src/cto/features/: build.py  contamination_guard.py  indication_history.py  leakage.py  split.py  sponsor_history.py  text.py
src/cto/models/: calibrate.py  compare_models.py  explain.py  gate.py  train.py  train_gold.py
tests/: test_contamination_guard.py  test_data.py  test_features.py  test_gate.py  test_gold_pipeline.py  test_indication_history.py  test_leakage.py  test_models.py  test_serving_endpoints.py  test_serving_featurize.py  test_split.py  test_sponsor_history.py
(+12 files in other folders)
