[project]
name = "cto-predict"
version = "0.1.0"
description = "Clinical trial outcome prediction — binary success/failure per phase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "betacal>=1.1.0",
    "catboost>=1.2.10",
    "datasets>=5.0.0",
    "dvc[s3]>=3.67.1",
    "evidently>=0.7.21",
    "fastapi>=0.138.2",
    "huggingface-hub>=1.21.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]

# bench = ["autogluon.tabular>=1.0", "tabpfn>=2.0", "nannyml"]
# Install bench deps separately: uv pip install autogluon.tabular tabpfn
# nannyml conflicts with lightgbm>=4.6 — install with: uv pip install nannyml --no-deps

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cto"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
